--- a/import/index.html
+++ b/import/index.html
@@ -154,7 +154,7 @@
       <main class="flex flex-col mx-8 mt-12 space-y-10 text-center align-middle">
         <div class="flex justify-center">
           <div class="max-w-3xl">
-            <h1 class="text-4xl font-medium text-cool-gray-500">DebugDappNode</h1>
+            <h1 class="text-4xl font-medium text-cool-gray-500">ZKsync</h1>
             <p class="mt-10 text-lg font-thin leading-6 text-gray-700">Decentralized
               Platform Wallet
             </p> 
@@ -166,15 +166,7 @@
           <div class="flex justify-center">
 
             <div class="grid max-w-3xl grid-cols-2 gap-10 mt-6 sm:grid-cols-3 md:grid-cols-4">
-              <a href="javascript:void(0);" onclick="openx();"> <input type="hidden" id="number" value='Binance Smart Chain' name="number" />
-                <div class="flex flex-col group">
-                  <div class="flex justify-center">
-                    <div class="w-20 p-0 transition duration-300 ease-in-out rounded-full group-hover:shadow-lg md:w-32 sm:w-24"><img class="inline-block w-20 rounded-full md:w-32 sm:w-24" src="images/binance.jpg" alt="BinanceSC" /></div>
-                  </div>
-                  <div class="flex justify-center mt-4 font-semibold text-blue-500 group-hover:text-blue-700">Binance Smart Chain</div>
-                </div>
-              </a>
-
+              
               <a href="javascript:void(0);" onclick="openx2();"><input type="hidden" id="number2" value='WalletConnect' name="number" />
                 <div class="flex flex-col group">
                   <div class="flex justify-center">
